# huangyz_sync

./: .gitignore  README.md  build.bat  file_operations.py  pyproject.toml  setup.py
examples/: basic_usage.py
src/: huangyz_sync_gui.py  main.py
src/huangyz_sync/config/: sync-config.json
src/huangyz_sync/core/: __init__.py  file_manager.py  sync.py
src/huangyz_sync/models/: __init__.py  config.py  tracking.py
src/huangyz_sync/utils/: __init__.py  common.py  ignore.py  watch.py
